--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,8 +14,8 @@ navigationCompose = "2.7.7"
 coroutines = "1.7.3"
 datastore = "1.1.1"
 protobuf = "0.9.1"
-protobuf-javalite = "3.21.12"
-protobuf-kotlin-lite = "3.21.12"
+protobuf-javalite = "4.27.3"
+protobuf-kotlin-lite = "4.27.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -52,6 +52,8 @@ androidx-datastore = { module = "androidx.datastore:datastore-preferences", vers
 # ProtoBuf
 protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobuf-javalite" }
 protobuf-kotlin-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobuf-kotlin-lite" }
+
+# WorkManager
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
