--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.5.1"
-kotlin = "1.9.24"
+kotlin = "1.9.10"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -19,6 +19,7 @@ protobuf-kotlin-lite = "4.27.3"
 hilt-work = "1.2.0"
 hilt-compiler = "1.2.0"
 work = "2.9.0"
+java-util = "3.22.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -57,6 +58,7 @@ androidx-datastore = { module = "androidx.datastore:datastore-preferences", vers
 # ProtoBuf
 protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobuf-javalite" }
 protobuf-kotlin-lite = { module = "com.google.protobuf:protobuf-kotlin-lite", version.ref = "protobuf-kotlin-lite" }
+protobuf-java-util = { module = "com.google.protobuf:protobuf-java-util", version.ref = "java-util" }
 
 # WorkManager
 androidx-work = { module = "androidx.work:work-runtime-ktx", version.ref = "work" }
