--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         android:theme="@style/Theme.AndroidCodingTest"
         android:name=".application.AndroidCodingTestApplication"
         tools:targetApi="31">
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="remove">
+        </provider>
+
         <activity
             android:name=".screens.MainActivity"
             android:exported="true"
